--- a/walrus/walrus/templates/shift_switch.html
+++ b/walrus/walrus/templates/shift_switch.html
@@ -26,25 +26,17 @@
     .buttonGB {float: right;}
 </style>
 
-<script type="text/javascript">
-    function addShift(s) {
-        employee.Shifts.add(s);
-    }
-</script>
-
 <body>
     <div id="form">
         <h3>Shifts Available:</h3>
         {% for s in shifts %}
             <fieldset>
-                <legend><b>{{ employee.pk }}</b></legend>
+                <legend><b>{{ s.pk }}</b></legend>
                 <b>Date: {{ s.due_date }}   Start: {{ s.start }}   End: {{ s.end }}</b>
                 <br><br>
                 <b>Assigned Employee {{ s.user.first_name }}</b>
                 <br><br>
-                <a href="{% url 'swap_shift/{{ employee.pk }}/{{ s.pk }}'}" class="button">Pick Up Shift</a>
-                <a href="/swap_shift/{{ employee.pk }}/{{ s.pk }}" class="button">Shift Switch</a>
-                <input id="clickMe" type="button" value="clickme" onclick="addShift(s);" />
+                <a href="/swap_shift/{{ employee.pk }}/{{ s.pk }}" class="button">Pick Up Shift</a>
                 <a href="{% url 'home' %}" class="button buttonGB">Go Back</a>
             </fieldset>
         {% endfor %}
