--- a/walrus/walrus/templates/edit_profile.html
+++ b/walrus/walrus/templates/edit_profile.html
@@ -53,7 +53,7 @@
     <h6 class="mb-0">First Name</h6>
     </div>
     <div class="col-sm-9 text-secondary">
-    <input type="text" class="form-control", id="first_name" name="first_name" value="{{user.first_name}}">
+    <input type="text" class="form-control", id="first_name" name="first_name" value="{{user.first_name}}" required>
     </div>
     </div>
     <div class="row mb-3">
@@ -61,7 +61,7 @@
         <h6 class="mb-0">Last Name</h6>
         </div>
         <div class="col-sm-9 text-secondary">
-        <input type="text" class="form-control" id = "last_name" name="last_name" value="{{user.last_name}}">
+        <input type="text" class="form-control" id = "last_name" name="last_name" value="{{user.last_name}}" required>
         </div>
         </div>
     <div class="row mb-3">
@@ -69,7 +69,7 @@
     <h6 class="mb-0">Email</h6>
     </div>
     <div class="col-sm-9 text-secondary">
-    <input type="text" class="form-control" id = "email" name="email" value="{{user.email}}">
+    <input type="text" class="form-control" id = "email" name="email" value="{{user.email}} " required>
     </div>
     </div>
     <div class="row mb-3">
@@ -77,7 +77,7 @@
     <h6 class="mb-0">Phone</h6>
     </div>
     <div class="col-sm-9 text-secondary">
-    <input type="text" class="form-control" id=phone_number name=phone_number value="{{user.employee.phone_number}}">
+    <input type="text" class="form-control" id=phone_number name=phone_number value="{{user.employee.phone_number}} " required>
     </div>
     </div>
    
