--- a/walrus/walrus/templates/availability.html
+++ b/walrus/walrus/templates/availability.html
@@ -1,7 +1,148 @@
-<h1>Edit your Avilability</h1>
-<form method="POST">
-    {% csrf_token %}
-{{ form.as_p }}
 
-<button> Submit </button> <br><br>
-</form>
+
+
+<html>
+
+{% load static %}
+<html lang="en"><head>
+  <meta charset="utf-8">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="{% static '/css/home_page.css' %}">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
+ 
+  </head>
+  <body style="">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/7.2.96/css/materialdesignicons.min.css" integrity="sha512-LX0YV/MWBEn2dwXCYgQHrpa9HJkwB+S+bnBpifSOTO1No27TqNMKYoAn6ff2FBh03THAzAiiCwQ+aPX+/Qt/Ow==" crossorigin="anonymous" referrerpolicy="no-referrer">
+  <link rel="stylesheet" href="{% static '/css/avil.css' %}">
+
+
+  <form method="POST">
+    {% csrf_token %}
+  
+  <div class="container">
+  <div class="row">
+  <div class="col-xl-9">
+  <div class="card-body pb-0">
+  <div class="row align-items-center">
+  <div class="col-md-9">
+  <div class="ms-3">
+  <div class="row my-4">
+  <div class="col-md-12">
+  <div>
+    <a href="{% url 'home' %}" class="back_button">Go Back</a>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  <h4>Edit your Avilability</h4>
+
+  <div class="card avil_card">
+    <div class="tab-content p-4">
+    <div class="tab-pane active show" id="projects-tab" role="tabpanel">
+    <div class="d-flex align-items-center">
+    <div class="flex-1">
+        
+      <form method="POST">
+        {% csrf_token %}
+        
+        <table class="table align-middle table-nowrap table-hover mb-0 ">
+            <thead class="table-light">
+                <tr>
+                    <th></th>
+                    <th>Sunday</th>
+                    <th>Monday</th>
+                    <th>Tuesday</th>
+                    <th>Wednesday</th>
+                    <th>Thursday</th>
+                    <th>Friday</th>
+                    <th>Saturday</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+            <td>Start</td>
+            <td>{{ form.sunday_start }}</td>
+            <td>{{ form.monday_start }}</td>
+            <td>{{ form.tuesday_start }}</td>
+            <td>{{ form.wednesday_start }}</td>
+            <td>{{ form.thursday_start }}</td>
+            <td>{{ form.friday_start }}</td>
+            <td>{{ form.saturday_start }}</td>
+            </tr>
+
+            <tr>
+                <td>End</td>
+                <td>{{ form.sunday_end }}</td>
+                <td>{{ form.monday_end }}</td>
+                <td>{{ form.tuesday_end }}</td>
+                <td>{{ form.wednesday_end }}</td>
+                <td>{{ form.thursday_end }}</td>
+                <td>{{ form.friday_end }}</td>
+                <td>{{ form.saturday_end }}</td>
+                </tr>
+            </tbody>
+            </table>
+               
+
+        <input type="Submit"  class = "btn btn-primary px-4" value="Save" >
+     
+    </form>
+    </div>
+    </div>
+    </div>
+    </div>
+
+  </form>
+
+  
+
+    </div>
+</div>
+</div>
+</div>
+</div>
+
+
+    </div>
+    </div>
+    
+  </div>
+  </div>
+  
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+
+  </ul>
+  </div>
+  </div>
+  
+  </div>
+  </div>
+  </div>
+  </div>
+ </script><script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script type="text/javascript"> 
+  </script>
+  </form>
+  </body></html>
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
