--- a/walrus/walrus/static/css/manager_tools.css
+++ b/walrus/walrus/static/css/manager_tools.css
@@ -11,6 +11,14 @@
   box-sizing: border-box; 
 }
 
+
+.back_button {
+  position: absolute; 
+  top: 55px; 
+  right: 250px; 
+}
+
+
 .parent-container {
   background-color:rgb(230, 236, 236) ;
   display: flex;
