--- a/walrus/walrus/templates/new_profile.html
+++ b/walrus/walrus/templates/new_profile.html
@@ -9,7 +9,7 @@
 
     <style type="text/css">
          
-    
+     
         </style>
     </head>
     <body style="">
@@ -34,15 +34,32 @@
     alt="Admin" class="rounded-circle" width="150">
     {% endif %}
 
-
+    <div>
 
     <div class="mt-3">
     <h4>{{user.first_name}} {{user.last_name}}</h4>
-  
     </div>
+    <hr>
     </div>
+
+    <div>
+
+
     </div>
+    <h4 class="mt-3"> {{user.employee.role}}</h4>
     </div>
+
+
+
+    </div>
+
+    </div>
+
+    
+
+
+
+
     <div class="card mt-3">
     <ul class="list-group list-group-flush">
    
