--- a/walrus/walrus/templates/schedule_employee.html
+++ b/walrus/walrus/templates/schedule_employee.html
@@ -35,7 +35,7 @@
   </div>
   </div>
   </div>
-  <h4>Add Task</h4>
+  <h4>Scheduling</h4>
 
   <div class="card">
     <div class="tab-content p-4">
